k8s/gitops/minio/statefulset.patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: minio
spec:
  replicas: 8
  template:
    spec:
      containers:
      - name: minio
        resources:
          requests:
            memory: 100M
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /export
          name: export
      volumes:
      - name: minio-user
        secret:
          defaultMode: 420
          secretName: minio
